--- a/.github/workflows/BuildBetaVersion.yml
+++ b/.github/workflows/BuildBetaVersion.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout do repositório
         uses: actions/checkout@v4
+      - name: Configurar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
       - name: Extrair versão da branch de destino
         id: version
         run: |
@@ -24,6 +28,9 @@ jobs:
             exit 1
           fi
           echo "version=$VERSION" >> $GITHUB_ENV
+      - name: Add sufixo -beta
+        run: |
+          npm version ${{ env.version }}-beta --no-git-tag-version
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
